chore: overflow fix

--- a/src/components/layout/index.less
+++ b/src/components/layout/index.less
@@ -41,4 +41,8 @@
       }
     }
   }
+  .app-content {
+    overflow-y: auto;
+    height: calc(100% - 64px);
+  }
 }
