--- a/src/pages/play/index.less
+++ b/src/pages/play/index.less
@@ -1,5 +1,4 @@
 .play {
-  height: 100%;
   padding-top: 40px;
   display: flex;
   flex-direction: row;
@@ -17,12 +16,12 @@
     .info {
       background-color: #f7f9fa;
       padding: 16px 19px;
-      margin-top: 32px;
+      margin: 32px 0 32px 0;
       border-left: 3px solid #e2e4e6;
     }
   }
   .video-list {
     margin-left: 30px;
-    overflow: auto;
+    overflow-y: auto;
   }
 }
